k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: berget-me
  labels:
    name: berget-me
