k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: berget-me
  namespace: berget-me
spec:
  selector:
    app: berget-me
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
